[package]
name = "lynx-scene-generator"
version = "0.1.0"
edition = "2021"

[features]
rendering-images = ["dep:image"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
clap = { version = "4.1.6", features = ["derive"] }
image = { version = "0.24.5", optional = true }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_derive2 = "0.1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
